# cv-analyser

./: .gitignore  README.md  add_openings.py  ai_prompts.py  backup_ai_prompts.py  database.py  download_cv.py  openings_db.json  openings_db_manager.py  process_cvs.py  pyproject.toml  streamlit_app.py  utils_cv.py
analises_cv/desenvolvimento/: Arthur Fernandes de Oliveira_Analista_de_Desenvolvimento_de_Sistemas_I.md  Arthur Fernandes de Oliveira_Analista_de_Desenvolvimento_de_Sistemas_II.md  Arthur Fernandes de Oliveira_Analista_de_Desenvolvimento_de_Sistemas_III.md  Arthur Fernandes de Oliveira_Analista_de_Qualidade.md
models/: analysis.py  brief.py  file.py  opening.py
